# Catalogs

./: .env.base  .gitignore  README.md
.github/: CODEOWNERS
.github/workflows/: build.yaml  deploy-env.yaml  deploy.yaml  parser.yaml  rules.yaml  user.yaml
backend/: .gitignore  Cargo.toml  build
backend/extraction_service/: Cargo.toml
backend/extraction_service/infrastructure/terraform/: api.tf  main.tf
backend/extraction_service/src/model/: event.rs
backend/rule_service/: Cargo.toml
backend/rule_service/infrastructure/terraform/: role.tf
backend/rule_service/src/routes/: rules.rs
backend/user_service/: .gitignore  Cargo.toml
backend/user_service/infrastructure/terraform/: dynamo.tf  lambda.tf  output.tf  role.tf  vars.tf
backend/user_service/src/: main.rs
backend/user_service/src/guards/: user.rs
backend/user_service/src/model/: marshalled_user.rs  mod.rs  role.rs  tenant.rs  user.rs
backend/user_service/src/routes/: oauth.rs  user.rs
backend/user_service/src/utils/: jwt.rs  password.rs
extraction/: .gitignore  Cargo.toml
extraction/infrastructure/terraform/: api.tf  lambda.tf  output.tf  role.tf  vars.tf
extraction/src/: main.rs
extraction/src/routes/: extractor.rs
extraction/src/service/: extractor.rs
frontend/: README.md  package.json  pnpm-lock.yaml
infrastructure/configs/: dev.tfvars
infrastructure/terraform/: .terraform.lock.hcl  dns.tf  extraction.tf  main.tf  rule.tf  s3.tf  user.tf  vars.tf
parser/: .env.base  Cargo.toml  build
parser/infrastructure/configs/: dev.tfvars
parser/infrastructure/terraform/: .terraform.lock.hcl  api.tf  lambda.tf  main.tf  vars.tf
parser/src/: main.rs  parser.rs
parser/src/routes/: extractor.rs
parser/src/service/: parser.rs
rule/infrastructure/terraform/: api.tf  dynamo.tf  lambda.tf  vars.tf
rules/: .env.base  Cargo.toml  api-deploy  build
rules/infrastructure/configs/: dev.tfvars
rules/infrastructure/terraform/: .terraform.lock.hcl  api.tf  api.yaml  dynamo.tf  lambda.tf  main.tf  role.tf  vars.tf
rules/src/: dynamo.go  go.mod  go.sum  main.go  main.rs  routes.go
rules/src/api/: rule.rs
rules/src/guards/: api_key.rs
rules/src/model/: rule.rs
rules/src/repository/: dynamo.rs
rules/src/routes/: rules.rs
scripts/: api-deploy  deploy
user/: .env.base  .gitignore  Cargo.toml
user/infrastructure/configs/: dev.tfvars
user/infrastructure/terraform/: .terraform.lock.hcl  dynamo.tf  lambda.tf  main.tf  output.tf  role.tf  secrets.tf
user/src/: main.rs
user/src/model/: mod.rs  oauth.rs  state.rs  user.rs
user/src/routes/: oauth.rs  user.rs
user/src/service/: oauth.rs
user/src/utils/: jwt.rs  utils.rs
