[package]
name = "parser"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
lambda_runtime = "0.6.0"
regex = "1.6.0"
serde_json = "1.0.83"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
