[package]
name = "rules"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
aws-config = "0.47.0"
aws-sdk-dynamodb = "0.17.0"
derive_more = "0.99.17"
lambda-web = { version = "0.2.0", features = ["actix4"] }
log = "0.4.17"
serde = "1.0.143"
serde_json = "1.0.83"
uuid = { version = "1.1.2", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
