[package]
name = "user_service"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "user_service"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.48.0"
aws-sdk-dynamodb = "0.18.0"
aws-sdk-secretsmanager = "0.18.0"
derive_more = "0.99.17"
lambda-web = { version = "0.2.0", features = ["rocket05"] }
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", features = ["tls", "json", "uuid"] }
serde = "1.0.143"
serde_json = "1.0.83"
uuid = { version = "1.1.2", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
jwt-simple = "0.11.0"
reqwest = "0.11.11"
urlencoding = "2.1.2"
openssl = { version = "0.10.41", features = ["vendored"] }
alcoholic_jwt = "4091.0.0"
jwt = "0.16.0"
